compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__signature_help__help_shows_first_missing_labelled_argument_if_out_of_order.snap
---
source: compiler-core/src/language_server/tests/signature_help.rs
assertion_line: 342
expression: "\npub fn wibble(a a: Int, b b: Int, c c: String) { 1.0 }\n\npub fn main() {\n    wibble(c: \"c\",)\n}\n    "
---
pub fn wibble(a a: Int, b b: Int, c c: String) { 1.0 }

pub fn main() {
    wibble(c: "c",)
                  ↑
}
    


----- Signature help -----
wibble(a: Int, b: Int, c: String) -> Float
       ▔▔▔▔▔▔

No documentation
