compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__signature_help__help_shows_labels.snap
---
source: compiler-core/src/language_server/tests/signature_help.rs
assertion_line: 314
expression: "\npub fn wibble(a: Int, b b: Int, c c: String) { 1.0 }\n\npub fn main() {\n    wibble()\n}\n    "
---
pub fn wibble(a: Int, b b: Int, c c: String) { 1.0 }

pub fn main() {
    wibble()
           ↑
}
    


----- Signature help -----
wibble(Int, b: Int, c: String) -> Float
       ▔▔▔

No documentation
