compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__signature_help__help_with_labelled_constructor.snap
---
source: compiler-core/src/language_server/tests/signature_help.rs
assertion_line: 441
expression: "\npub record Pokemon {\n    Pokemon(name: String, types: List<String>, moves: List<String>)\n}\n\npub fn main() {\n    Pokemon(name: \"Jirachi\",)\n}\n    "
---
pub record Pokemon {
    Pokemon(name: String, types: List<String>, moves: List<String>)
}

pub fn main() {
    Pokemon(name: "Jirachi",)
                            ↑
}
    


----- Signature help -----
Pokemon(name: String, types: List<String>, moves: List<String>) -> Pokemon
                      ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔

No documentation
